<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_ParamMoveMoteur" Id="{2f68113a-67cd-4d71-bd93-e86bd88e1a9b}">
    <Declaration><![CDATA[TYPE ST_ParamMoveMoteur :
STRUCT
	lrVitesse:LREAL:=100;			//vitesse
	lrAcceleration:LREAL:=0;		//accélération standard, 0 si standard
	lrDecceleration:LREAL:=0;		//accélération standard, 0 si standard
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>